stop horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ html, body {
 .app-container {
 	display: flex;
 	flex-direction: column;
-  min-height: 300vh;;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 .blurred {
